# Fake-Data-Web-API

./: .gitignore  README.md  pyproject.toml  test.db  teste.py
migrations/: env.py
migrations/versions/: 3a35afb9ae12_first_migration.py  4896269009e8_att_users_table.py  5bce25182f53_first_revision.py  b7447bcfdcf9_added_products_categories_sellers.py  ba3f5b44645d_created_customers_table.py
src/: main.py
src/core/: config.py  dependencies.py  utils.py  variables.py
src/core/database/: database.py  models.py
src/core/fdata/: generator.py  products.json
src/models/: categories.py  customers.py  products.py  sellers.py  token.py  user.py
src/routes/auth/: router.py
src/routes/categories/: router.py
src/routes/customers/: router.py
src/routes/products/: router.py
src/routes/sellers/: router.py
src/routes/signup/: router.py
